chnager image immeuble

--- a/Final actuel/HTML/Accueil.html
+++ b/Final actuel/HTML/Accueil.html
@@ -78,7 +78,7 @@
                     </a>
                     <br>
                     <a href="#"><img src="../image/app3.jpg" alt="..." class="img2" data-aos="fade-left" data-aos-duration="2000" />
-                        <div class="desc1" data-aos="fade-left" data-aos-duration="2000">Devis en ligne</div>
+                        <div class="desc1" data-aos="fade-left" data-aos-duration="2000">Cost Estimate</div>
                     </a>
                     <br>
                     <a href="#">
