--- a/Final actuel/HTML/commentaire.html
+++ b/Final actuel/HTML/commentaire.html
@@ -64,7 +64,7 @@ and open the template in the editor.
                             </br>
                             <hr class="idk">
                             <p class="on_hr">
-                                <span class="TitleHR">Number ONE</span>
+                                <span class="TitleHR">Projets</span>
                             </p>
 
 
@@ -84,7 +84,7 @@ and open the template in the editor.
                             </br></br>
                             <hr class="idk">
                             <p class="on_hr">
-                                <span class="TitleHR">Number TWO</span>
+                                <span class="TitleHR">Notation</span>
                             </p>
                             <div class="rating">
                                 <a href="#5" onClick="valetoile(5)" title="Donner 5 étoiles">☆</a>
