--- a/Final actuel/HTML/project.html
+++ b/Final actuel/HTML/project.html
@@ -72,9 +72,9 @@
             sunt in culpa qui officia deserunt mollit anim id est laborum.
         </div>
         <section>
-            <img id="Img_before_1" class="img_before" src="../image/69786526_2330927653841643_3051100133778259968_n.jpg" alt="" />
-            <img id="Img_before_2" class="img_before" src="../image/IMG_2434.jpg" alt="" />
-            <img id="Img_before_3" class="img_before" src="../image/IMG_2441-2.jpg" alt="" />
+            <img id="Img_before_1" class="img_before" src="../image/apartment-bed-bedroom-book-shelves-439227.jpg" alt="" />
+            <img id="Img_before_2" class="img_before" src="../image/app1.jpg" alt="" />
+            <img id="Img_before_3" class="img_before" src="../image/app2.jpg" alt="" />
         </section>
         <br><br>
         <hr class="idk">
@@ -82,26 +82,26 @@
         <div id="Section_Work" class="container">
             <div class="row">
                 <div id="work1" class="workDiv col-md-2">
-                    <img id="work1_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
-                    <img id="work1_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
+                    <img id="work1_before" class="work before" src="../image/app1.jpg" alt="" />
+                    <img id="work1_after" class="work after" src="../image/app2.jpg" alt="" />
                     <p id="work1_legend" class="legend">Changement de peinture</p>
                 </div>
                 <div class="workSpace col-md-1"></div>
                 <div id="work2" class="workDiv col-md-2">
-                    <img id="work2_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
-                    <img id="work2_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
+                    <img id="work2_before" class="work before" src="../image/app1.jpg" alt="" />
+                    <img id="work2_after" class="work after" src="../image/app2.jpg" alt="" />
                     <p id="work2_legend" class="legend">Changement de carrelage</p>
                 </div>
                 <div class="workSpace col-md-1"></div>
                 <div id="work3" class="workDiv col-md-2">
-                    <img id="work3_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
-                    <img id="work3_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
+                    <img id="work3_before" class="work before" src="../image/app1.jpg" alt="" />
+                    <img id="work3_after" class="work after" src="../image/app2.jpg" alt="" />
                     <p id="work3_legend" class="legend">Changement de carrelage</p>
                 </div>
                 <div class="workSpace col-md-1"></div>
                 <div id="work4" class="workDiv col-md-2">
-                    <img id="work4_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
-                    <img id="work4_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
+                    <img id="work4_before" class="work before" src="../image/app1.jpg" alt="" />
+                    <img id="work4_after" class="work after" src="../image/app2.jpg" alt="" />
                     <p id="work4_legend" class="legend">Changement de carrelage</p>
 
                 </div>
@@ -110,20 +110,20 @@
             <div class="row">
                 <div class="workSpace col-md-1-spe"></div>
                 <div id="work5" class="workDiv col-md-2">
-                    <img id="work5_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
-                    <img id="work5_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
+                    <img id="work5_before" class="work before" src="../image/app1.jpg" alt="" />
+                    <img id="work5_after" class="work after" src="../image/app2.jpg" alt="" />
                     <p id="work5_legend" class="legend">Changement de carrelage</p>
                 </div>
                 <div class="workSpace col-md-1"></div>
                 <div id="work6" class="workDiv col-md-2">
-                    <img id="work6_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
-                    <img id="work6_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
+                    <img id="work6_before" class="work before" src="../image/app1.jpg" alt="" />
+                    <img id="work6_after" class="work after" src="../image/app2.jpg" alt="" />
                     <p id="work6_legend" class="legend">Changement de carrelage</p>
                 </div>
                 <div class="workSpace col-md-1"></div>
                 <div id="work7" class="workDiv col-md-2">
-                    <img id="work7_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
-                    <img id="work7_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
+                    <img id="work7_before" class="work before" src="../image/app1.jpg" alt="" />
+                    <img id="work7_after" class="work after" src="../image/app2.jpg" alt="" />
                     <p id="work7_legend" class="legend">Changement de carrelage</p>
                 </div>
                 <div class="workSpace col-md-1"></div>
@@ -131,26 +131,26 @@
             </br>
             <div class="row">
                 <div id="work8" class="workDiv col-md-2">
-                    <img id="work8_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
-                    <img id="work8_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
+                    <img id="work8_before" class="work before" src="../image/app1.jpg" alt="" />
+                    <img id="work8_after" class="work after" src="../image/app2.jpg" alt="" />
                     <p id="work8_legend" class="legend">Changement de carrelage</p>
                 </div>
                 <div class="workSpace col-md-1"></div>
                 <div id="work9" class="workDiv col-md-2">
-                    <img id="work9_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
-                    <img id="work9_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
+                    <img id="work9_before" class="work before" src="../image/app1.jpg" alt="" />
+                    <img id="work9_after" class="work after" src="../image/app2.jpg" alt="" />
                     <p id="work9_legend" class="legend">Changement de carrelage</p>
                 </div>
                 <div class="workSpace col-md-1"></div>
                 <div id="work10" class="workDiv col-md-2">
-                    <img id="work10_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
-                    <img id="work10_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
+                    <img id="work10_before" class="work before" src="../image/app1.jpg" alt="" />
+                    <img id="work10_after" class="work after" src="../image/app2.jpg" alt="" />
                     <p id="work10_legend" class="legend">Changement de carrelage</p>
                 </div>
                 <div class="workSpace col-md-1"></div>
                 <div id="work11" class="workDiv col-md-2">
-                    <img id="work11_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
-                    <img id="work11_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
+                    <img id="work11_before" class="work before" src="../image/app1.jpg" alt="" />
+                    <img id="work11_after" class="work after" src="../image/app2.jpg" alt="" />
                     <p id="work11_legend" class="legend">Changement de carrelage</p>
                 </div>
             </div>
@@ -166,9 +166,9 @@
             sunt in culpa qui officia deserunt mollit anim id est laborum.
         </div>
         <section>
-            <img id="Img_after_1" class="img_after" src="../image/69786526_2330927653841643_3051100133778259968_n.jpg" alt="" />
-            <img id="Img_after_2" class="img_after" src="../image/IMG_2434.jpg" alt="" />
-            <img id="Img_after_3" class="img_after" src="../image/IMG_2441-2.jpg" alt="" />
+            <img id="Img_after_1" class="img_after" src="../image/apartment-bed-bedroom-book-shelves-439227.jpg" alt="" />
+            <img id="Img_after_2" class="img_after" src="../image/app1.jpg" alt="" />
+            <img id="Img_after_3" class="img_after" src="../image/app2.jpg" alt="" />
         </section>
         <br>
         <br>
