--- a/Final actuel/HTML/project.html
+++ b/Final actuel/HTML/project.html
@@ -189,7 +189,7 @@
         </section>
         <br>
         <hr class="idk">
-        <p class="on_hr"><span class="subtitle">Avis</span></p>
+        <p class="on_hr"><span id="nameAvis" class="subtitle">Avis</span></p>
         <div id="avis">
             <div class="rating">
                 <span id="etoile1">☆</span>
