--- a/Final actuel/HTML/commentaire.html
+++ b/Final actuel/HTML/commentaire.html
@@ -67,11 +67,11 @@ and open the template in the editor.
 
 
                             <select name="traveaux" id="com3">
-                                <OPTION value="choix1">choix numero 1</option>
-                                <OPTION value="choix2">choix numero 2</option>
-                                <OPTION value="choix3">choix numero 3</option>
-                                <OPTION value="choix4">choix numero 4</option>
-                                <OPTION value="choix5">choix numero 5</option>
+                                <OPTION id="choix1" value="choix1">choix numero 1</option>
+                                <OPTION id="choix2" value="choix2">choix numero 2</option>
+                                <OPTION id="choix3" value="choix3">choix numero 3</option>
+                                <OPTION id="choix4" value="choix4">choix numero 4</option>
+                                <OPTION id="choix5" value="choix5">choix numero 5</option>
                             </select>
                             </br></br>
 
