mise a jour de avis

--- a/Final actuel/HTML/project.html
+++ b/Final actuel/HTML/project.html
@@ -193,7 +193,7 @@
         <hr class="idk">
         <p class="on_hr"><span id="nameAvis" class="subtitle">Avis</span></p>
         <div id="avis">
-            <div class="rating">
+            <div id='lesEtoiles' class="rating">
                 <span id="etoile1">☆</span>
                 <span id="etoile2">☆</span>
                 <span id="etoile3">☆</span>
