--- a/Final actuel/HTML/Estimate.html
+++ b/Final actuel/HTML/Estimate.html
@@ -104,7 +104,7 @@
             <hr class="idk">
             <p class="on_hr"><span class="subtitle" id="title3">Furnitures</span></p>
             <section>
-                <div>You have to choice the kind of furniture, and chose your(s) favorite(s) one(s)</div>
+                <div>You have to choose the kind of furniture and your(s) favorite(s) one(s)</div>
                 <section id="form_furniture" action="">
                     <label for="furniture">Type of furniture : </label>
                     <select id="furniture">
@@ -129,7 +129,7 @@
                                             <div class="furniture_dimension">
                                                 <div class="length" id="length1">120</div>x<div class="width" id="width1">80</div>x<div class="height" id="height1">90</div>
                                             </div>
-                                            <p class="furniture_description" id="furniture_description_1">Très confortable</p>
+                                            <p class="furniture_description" id="furniture_description_1">Really confortable</p>
                                         </section>
                                     </div>
                                 </label>
