--- a/thomas/HTML/Estimate.html
+++ b/thomas/HTML/Estimate.html
@@ -81,7 +81,7 @@
                             <div class="furniture_dimension">
                                 <div class="length">120</div>x<div class="width">80</div>x<div class="height">90</div>
                             </div>
-                            <p class="furniture_description">Très confortable</p>
+                            <p class="furniture_description">Really confortable</p>
                         </section>
                     </div>
                 </label>
