--- a/Final actuel/HTML/Accueil.html
+++ b/Final actuel/HTML/Accueil.html
@@ -72,16 +72,16 @@
             </div>
             <section class="pres_right1">
                 <div class="mosa">
-                    <a href="#">
+                    <a href="project.html">
                         <div class="desc1" data-aos="fade-left" data-aos-duration="2000">Projets</div>
                         <img src="../image/app3.jpg" alt="..." class="img2" data-aos="fade-left" data-aos-duration="2000" />
                     </a>
                     <br>
-                    <a href="#"><img src="../image/app3.jpg" alt="..." class="img2" data-aos="fade-left" data-aos-duration="2000" />
+                    <a href="Estimate.html"><img src="../image/app3.jpg" alt="..." class="img2" data-aos="fade-left" data-aos-duration="2000" />
                         <div class="desc1" data-aos="fade-left" data-aos-duration="2000">Cost Estimate</div>
                     </a>
                     <br>
-                    <a href="#">
+                    <a href="Estimate.html">
                         <div class="desc1" data-aos="fade-left" data-aos-duration="2000">Travaux Professionnels</div>
                         <img src="../image/app3.jpg" alt="..." class="img2" data-aos="fade-left" data-aos-duration="2000" />
                     </a>
