--- a/Final actuel/HTML/Accueil.html
+++ b/Final actuel/HTML/Accueil.html
@@ -47,19 +47,19 @@
             </ol>
             <div class="carousel-inner" data-aos="fade" data-aos-duration="3000">
                 <div class="carousel-item active">
-                    <a href="#"><img src="../image/img1.jpg" class="image d-block w-100" alt="..."></a>
+                    <a href="#"><img src="../image/apartment-bed-bedroom-book-shelves-439227.jpg" class="image d-block w-100" alt="..."></a>
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Project 1</h5>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <a href="#"><img src="../image/img2.jpg" class="image d-block w-100" alt="..."></a>
+                    <a href="#"><img src="../image/app1.jpg" class="image d-block w-100" alt="..."></a>
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Project 2</h5>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <a href="#"><img src="../image/img3.jpg" class="image d-block w-100" alt="..."></a>
+                    <a href="#"><img src="../image/app2.jpg" class="image d-block w-100" alt="..."></a>
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Project 3</h5>
                     </div>
@@ -95,7 +95,7 @@
                     <img src="../image/app1.jpg" class="image" alt="" />
                 </div>
                 <div class="pres_right textr" data-aos="fade-left" data-aos-duration="2000">
-                    <h2 class="textDescD" id="title1">Project title</h2>
+                    <h2 class="textDescD Ptitle" id="title1">Project title</h2>
                     <p class="textDescD">Short desc of the project</p>
                 </div>
             </div>
@@ -105,7 +105,7 @@
             <div class="pres" id="Page2">
 
                 <div class="pres_right textl" data-aos="fade-right" data-aos-duration="2000">
-                    <h2 class="textDescG" id="title2">Project title</h2>
+                    <h2 class="textDescG Ptitle" id="title2">Project title</h2>
                     <p class="textDescG">Short desc of the project</p>
                 </div>
                 <div class="pres_left" data-aos="fade-left" data-aos-duration="2000">
@@ -121,7 +121,7 @@
                     <img src="../image/app1.jpg" class="image" alt="" />
                 </div>
                 <div class="pres_right textr" data-aos="fade-left" data-aos-duration="2000">
-                    <h2 class="textDescD" id="title3">Project title</h2>
+                    <h2 class="textDescD Ptitle" id="title3">Project title</h2>
                     <p class="textDescD">Short desc of the project</p>
                 </div>
             </div>
