--- a/Final actuel/HTML/HTMLAdminProject.html
+++ b/Final actuel/HTML/HTMLAdminProject.html
@@ -81,9 +81,9 @@
         </div>
 
         <section>
-            <img id="Img_before_1" class="img_before" src="../image/69786526_2330927653841643_3051100133778259968_n.jpg" alt="" />
-            <img id="Img_before_2" class="img_before" src="../image/IMG_2434.jpg" alt="" />
-            <img id="Img_before_3" class="img_before" src="../image/IMG_2441-2.jpg" alt="" />
+            <img id="Img_before_1" class="img_before" src="../image/apartment-bed-bedroom-book-shelves-439227.jpg" alt="" />
+            <img id="Img_before_2" class="img_before" src="../image/app1.jpg" alt="" />
+            <img id="Img_before_3" class="img_before" src="../image/app2.jpg" alt="" />
         </section>
         <hr>
         <div>
@@ -96,26 +96,26 @@
             <div id="Section_Work" class="container">
                 <div class="row">
                     <div id="work1" class="workDiv col-md-2">
-                        <img id="work1_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
-                        <img id="work1_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
+                        <img id="work1_before" class="work before" src="../image/app1.jpg" alt="" />
+                        <img id="work1_after" class="work after" src="../image/app2.jpg" alt="" />
                         <div><input type="text" class="Change_input_legend" id="Work1_legend"></div>
                     </div>
                     <div class="workSpace col-md-1"></div>
                     <div id="work2" class="workDiv col-md-2">
-                        <img id="work2_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
-                        <img id="work2_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
+                        <img id="work2_before" class="work before" src="../image/app1.jpg" alt="" />
+                        <img id="work2_after" class="work after" src="../image/app2.jpg" alt="" />
                         <div><input type="text" class="Change_input_legend" id="Work2_legend"></div>
                     </div>
                     <div class="workSpace col-md-1"></div>
                     <div id="work3" class="workDiv col-md-2">
-                        <img id="work3_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
-                        <img id="work3_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
+                        <img id="work3_before" class="work before" src="../image/app1.jpg" alt="" />
+                        <img id="work3_after" class="work after" src="../image/app2.jpg" alt="" />
                         <div><input type="text" class="Change_input_legend" id="Work3_legend"></div>
                     </div>
                     <div class="workSpace col-md-1"></div>
                     <div id="work4" class="workDiv col-md-2">
-                        <img id="work4_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
-                        <img id="work4_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
+                        <img id="work4_before" class="work before" src="../image/app1.jpg" alt="" />
+                        <img id="work4_after" class="work after" src="../image/app2.jpg" alt="" />
                         <div><input type="text" class="Change_input_legend" id="Work4_legend"></div>
 
                     </div>
@@ -124,20 +124,20 @@
                 <div class="row">
                     <div class="workSpace col-md-1-spe"></div>
                     <div id="work5" class="workDiv col-md-2">
-                        <img id="work5_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
-                        <img id="work5_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
+                        <img id="work5_before" class="work before" src="../image/app1.jpg" alt="" />
+                        <img id="work5_after" class="work after" src="../image/app2.jpg" alt="" />
                         <div><input type="text" class="Change_input_legend" id="Work5_legend"></div>
                     </div>
                     <div class="workSpace col-md-1"></div>
                     <div id="work6" class="workDiv col-md-2">
-                        <img id="work6_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
-                        <img id="work6_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
+                        <img id="work6_before" class="work before" src="../image/app1.jpg" alt="" />
+                        <img id="work6_after" class="work after" src="../image/app2.jpg" alt="" />
                         <div><input type="text" class="Change_input_legend" id="Work6_legend"></div>
                     </div>
                     <div class="workSpace col-md-1"></div>
                     <div id="work7" class="workDiv col-md-2">
-                        <img id="work7_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
-                        <img id="work7_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
+                        <img id="work7_before" class="work before" src="../image/app1.jpg" alt="" />
+                        <img id="work7_after" class="work after" src="../image/app2.jpg" alt="" />
                         <div><input type="text" class="Change_input_legend" id="Work7_legend"></div>
                     </div>
                     <div class="workSpace col-md-1"></div>
@@ -145,26 +145,26 @@
                 <br>
                 <div class="row">
                     <div id="work8" class="workDiv col-md-2">
-                        <img id="work8_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
-                        <img id="work8_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
+                        <img id="work8_before" class="work before" src="../image/app1.jpg" alt="" />
+                        <img id="work8_after" class="work after" src="../image/app2.jpg" alt="" />
                         <div><input type="text" class="Change_input_legend" id="Work8_legend"></div>
                     </div>
                     <div class="workSpace col-md-1"></div>
                     <div id="work9" class="workDiv col-md-2">
-                        <img id="work9_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
-                        <img id="work9_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
+                        <img id="work9_before" class="work before" src="../image/app1.jpg" alt="" />
+                        <img id="work9_after" class="work after" src="../image/app2.jpg" alt="" />
                         <div><input type="text" class="Change_input_legend" id="Work9_legend"></div>
                     </div>
                     <div class="workSpace col-md-1"></div>
                     <div id="work10" class="workDiv col-md-2">
-                        <img id="work10_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
-                        <img id="work10_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
+                        <img id="work10_before" class="work before" src="../image/app1.jpg" alt="" />
+                        <img id="work10_after" class="work after" src="../image/app2.jpg" alt="" />
                         <div><input type="text" class="Change_input_legend" id="Work10_legend"></div>
                     </div>
                     <div class="workSpace col-md-1"></div>
                     <div id="work11" class="workDiv col-md-2">
-                        <img id="work11_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
-                        <img id="work11_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
+                        <img id="work11_before" class="work before" src="../image/app1.jpg" alt="" />
+                        <img id="work11_after" class="work after" src="../image/app2.jpg" alt="" />
                         <div><input type="text" class="Change_input_legend" id="Work11_legend"></div>
                     </div>
                 </div>
@@ -185,9 +185,9 @@
             </div>
 
             <section>
-                <img id="Img_after_1" class="img_after" src="../image/69786526_2330927653841643_3051100133778259968_n.jpg" alt="" />
-                <img id="Img_after_2" class="img_after" src="../image/IMG_2434.jpg" alt="" />
-                <img id="Img_after_3" class="img_after" src="../image/IMG_2441-2.jpg" alt="" />
+                <img id="Img_after_1" class="img_after" src="../image/apartment-bed-bedroom-book-shelves-439227.jpg" alt="" />
+                <img id="Img_after_2" class="img_after" src="../image/app1.jpg" alt="" />
+                <img id="Img_after_3" class="img_after" src="../image/app2.jpg" alt="" />
             </section>
             <br>
             <br>
